# pico-coremark

./: CMakeLists.txt  README.md
coremark/: core_portme.c  core_portme.h
